# python_backend_template

./: Dockerfile  Makefile  TODO.txt  dev.env  docker-compose.yml  pyproject.toml  wait-for.sh
.configs/keycloak/: realm.json
app/: bootstrap.py  config.py  connections.py  logger.py
app/adapters/: __init__.py  connection.py
app/adapters/cache/: cache.py  memory.py  redis.py
app/adapters/db/: __init__.py  respositories.py  uow.py
app/adapters/db/sqlalchemy/: __init__.py  uow.py  (+4 more)
app/adapters/publisher/: memory.py  nats.py  publisher.py
app/connections/: nats.py  postgres.py  redis.py  sql.py
app/connections/sql/: __init__.py  postgres.py  sql.py  sqlite.py
app/domain/: aggregate.py
app/domain/models/: user.py
app/infra/: __init__.py  connection.py
app/infra/keycloak/: auth.py
app/infra/memory/: auth.py  cache.py  publisher.py
app/infra/nats/: publisher.py
app/infra/redis/: cache.py
app/infra/sqlalchemy/: connection.py  query.py  tables.py  uow.py
app/models/: board.py  task.py  user.py
app/services/: __init__.py  errors.py
app/services/adapters/: __init__.py  cache.py  publisher.py  query.py  uow.py
app/services/interfaces/: __init__.py  publisher.py  uow.py
app/services/ports/: __init__.py  cache.py  query.py  uow.py
app/services/user/: __init__.py  service.py
tests/integration/: conftest.py
tests/integration/adapters/: test_cache.py
tests/integration/server/: test_router_monitoring.py
tests/unit/adapters/: test_memory_cache.py  test_memory_db.py  test_memory_publisher.py
tests/unit/services/: test_query.py  test_uow.py
(+20 files in other folders)
