[tool.poetry]
name = "service_name"
version = "0.1.0"
description = ""
authors = ["Robbie Hughes <rwhughes91@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.2"
fastapi = "^0.111.0"
loguru = "^0.7.2"
redis = {extras = ["hiredis"], version = "^5.0.4"}
pydantic-settings = "^2.2.1"
uvicorn = "^0.30.0"
nats-py = "^2.7.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
bandit = "^1.7.8"
safety = "^3.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"
pytest-watch = "^4.2.0"
pytest-dotenv = "^0.5.2"
requests = "^2.32.3"
aiosqlite = "^0.20.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"